add server.xml with tomcat configuration and java opts