@@ -36,4 +36,6 @@ RUN set -eux; \
   rm -Rf webapps/*; \
   rm tomcat.tar.gz*
 
+ENV JAVA_OPTS=" -XX:+PrintFlagsFinal -XX:+PrintGCDetails -XX:NativeMemoryTracking=summary -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+ExitOnOutOfMemoryError "    
+
 CMD ["bin/catalina.sh", "run"]
